--- a/netlibrary/build.gradle
+++ b/netlibrary/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion rootProject.ext.guanliduan.compileSdkVersion
+    buildToolsVersion rootProject.ext.guanliduan.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 23
+        minSdkVersion  rootProject.ext.guanliduan.minSdkVersion
+        targetSdkVersion rootProject.ext.guanliduan.targetSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -21,12 +21,20 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-
+    compile "com.android.support:appcompat-v7:$support"
+    compile "com.android.support:recyclerview-v7:$support"
+    compile "com.android.support:design:$support"
     compile 'io.reactivex:rxjava:1.2.0'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+//    compile 'com.orhanobut:logger:1.8'
+    compile 'com.github.zhaokaiqiang.klog:library:1.6.0'//log 打印
+
+    compile 'org.greenrobot:eventbus:3.0.0'
+
+//    compile 'cn.finalteam.rxgalleryfinal:library:0.0.8'//图片选择器
 }
